# TrajectoryCorrelation

trajectory_correlation/: CMakeLists.txt  package.xml
trajectory_correlation/config/: params.yaml
trajectory_correlation/include/: params.h
trajectory_correlation/launch/: trajectory_correlation.launch
trajectory_correlation/src/: FakeGps.cpp  FakeVo.cpp  TrajectoryCorrelationNode.cpp
